5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1594_2425.log
== TEST (2019-04-04 16:15:42) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustível gasto: "))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:17:19) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(c, 3)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:17:53) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3))"km/l"
-- ERROR:
File "XXXX", line 4
    print(round(c, 3))"km/l"
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:18:16) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(c, 3 "km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:18:26) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3 km/l))
-- ERROR:
File "XXXX", line 4
    print(round(c, 3 km/l))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:19:21) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3, km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(c, 3, km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:19:43) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(c, 3, "km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:20:26) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3), "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:20:41) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3), "km/l")
-- EXECUTION TIME:
0.194791
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:57:33) 
-- CODE:
a=float(input("km percorridos: "))
b=float(input("Combustivel gasto: "))
c=a/b
print(round(c, 3), "km/l")
-- EXECUTION TIME:
0.201126
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
